--- a/finetune-and-evaluate.ipynb
+++ b/finetune-and-evaluate.ipynb
@@ -991,7 +991,7 @@
    "source": [
     "These materials can then be used down the line for other tasks. A few functionalities were not covered in this notebook such as Monte Carlo Tree Search Decoding, single formula prompt generation, extractiong learned embeddings... These can all be found in the **README.md**.\n",
     "\n",
-    "For any additional queries, feel free to e-mail cyprien.bone.24@ucl.ac.uk or k.t.butler@ucl.ac.uk"
+    "For any additional queries, feel free to e-mail cyprien.bone.24@ucl.ac.uk"
    ]
   }
  ],
